--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "dependencies": {
         "dotenv": "^16.0.1",
         "express": "^4.18.0",
+        "fetch": "^1.1.0",
         "mongodb": "^4.5.0",
+        "node-fetch": "^3.2.4",
         "nodemon": "^2.0.16",
         "serialport": "^10.4.0",
         "socket.io": "^4.5.0"
