--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "dotenv": "^16.0.1",
         "express": "^4.18.0",
         "fetch": "^1.1.0",
+        "firebase": "^9.8.1",
         "mongodb": "^4.5.0",
         "node-fetch": "^3.2.4",
         "nodemon": "^2.0.16",
